[package]
name = "raspi_ip_email"
version = "0.1.0"
authors = ["pujq <2190975784@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.10.0-alpha.4"
toml = "0.5.7"
lazy_static = "1.4.0"
serde = { version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
chrono = "0.4.19"